--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,15 +1,26 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Multiple Python Versions Test
+name: Python package
 
 on:
   workflow_dispatch:
   push:
+    branches: [ "master" ]
+    paths:
+      - ".github/actions/setup-python/**"
+      - ".github/workflows/python-package.yml"
+      - "src/nonebot_plugin_mystool/**"
+      - "pyproject.toml"
+      - "poetry.lock"
   pull_request:
-
-permissions:
-  contents: read
+    branches: [ "master" ]
+    paths:
+      - ".github/actions/setup-python/**"
+      - ".github/workflows/python-package.yml"
+      - "src/nonebot_plugin_mystool/**"
+      - "pyproject.toml"
+      - "poetry.lock"
 
 jobs:
   build:
@@ -18,40 +29,20 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.9", "3.10", "3.11"]
+        python-version: ["3.9", "3.10", "3.11", "3.12"]
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
+    - uses: actions/checkout@v4
+    - name: Setup Python environment
+      uses: ./.github/actions/setup-python
       with:
-        python-version: ${{ matrix.python-version }}
-
-    - name: Install dependencies
-      run: |
-        curl -sSL https://install.python-poetry.org | python3 -
-        poetry install --with test
-
+        python-version: "3.11"
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
         poetry run flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         poetry run flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-
-#    - name: Test with pytest
-#      run: |
-#        VIRTUALENV_PATH=`poetry run poetry env info --path`
-#        source $VIRTUALENV_PATH/bin/activate
-#        cd test-nonebot-project
-#        pytest -v --doctest-modules --capture=sys --html=report-${{ matrix.python-version }}.html --self-contained-html bot.py
-#        deactivate
-
-    - name: Build package with Poetry
-      run: poetry build
-
-#    - name: Upload pytest HTML result
-#      uses: actions/upload-artifact@v3
-#      with:
-#        name: pytest-html-${{ matrix.python-version }}
-#        path: report-${{ matrix.python-version }}.html
+    - name: Poetry build
+      run: |
+        poetry build
