--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ packages = [
 [tool.poetry.dependencies]
 python = ">=3.9,<4.0"
 httpx = ">=0.24.1,<0.28.0"
+nonebot2 = "^2.0.1"
 nonebot_plugin_apscheduler = ">=0.2.0"
 nonebot-plugin-send-anything-anywhere = ">=0.5,<0.7"
 ntplib = "^0.4.0"
@@ -39,11 +40,6 @@ nonebot2 = ">=2.0.0"
 pytz = ">=2023.4,<2025.0"
 
 [tool.poetry.group.test.dependencies]
-nonebot2 = { version = "^2.0.1", extras = ["fastapi", "httpx", "websockets"] }
-nonebug = "^0.3.4"
-pytest = "^7.4.0"
-pytest-html = ">=3.2,<5.0"
-pytest-asyncio = ">=0.21,<0.24"
 flake8 = ">=6.1,<8.0"
 
 [tool.poetry.group.test]
