--- a/.github/workflows/plugin-test.yml
+++ b/.github/workflows/plugin-test.yml
@@ -3,7 +3,7 @@ name: Nonebot Plugin Test
 on:
   workflow_dispatch:
   push:
-    branches: [ "master" ]
+    branches: [ "stable", "dev" ]
     paths:
       - ".github/actions/setup-python/**"
       - ".github/workflows/plugin-test.yml"
@@ -11,7 +11,7 @@ on:
       - "pyproject.toml"
       - "poetry.lock"
   pull_request:
-    branches: [ "master" ]
+    branches: [ "stable", "dev" ]
     paths:
       - ".github/actions/setup-python/**"
       - ".github/workflows/plugin-test.yml"
