--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -6,7 +6,7 @@ name: Python package
 on:
   workflow_dispatch:
   push:
-    branches: [ "master" ]
+    branches: [ "stable", "dev" ]
     paths:
       - ".github/actions/setup-python/**"
       - ".github/workflows/python-package.yml"
@@ -14,7 +14,7 @@ on:
       - "pyproject.toml"
       - "poetry.lock"
   pull_request:
-    branches: [ "master" ]
+    branches: [ "stable", "dev" ]
     paths:
       - ".github/actions/setup-python/**"
       - ".github/workflows/python-package.yml"
