--- a/.github/actions/setup-python/action.yml
+++ b/.github/actions/setup-python/action.yml
@@ -20,5 +20,7 @@ runs:
         architecture: "x64"
         cache: "poetry"
 
-    - run: poetry install --with test
+    - run: |
+        poetry install --with test
+        poetry build
       shell: bash
