ci: 测试代码更新时触发

--- a/.github/workflows/plugin-test.yml
+++ b/.github/workflows/plugin-test.yml
@@ -8,6 +8,7 @@ on:
       - ".github/actions/setup-python/**"
       - ".github/workflows/plugin-test.yml"
       - "src/nonebot_plugin_mystool/**"
+      - "tests/**"
       - "pyproject.toml"
       - "poetry.lock"
   pull_request:
@@ -16,6 +17,7 @@ on:
       - ".github/actions/setup-python/**"
       - ".github/workflows/plugin-test.yml"
       - "src/nonebot_plugin_mystool/**"
+      - "tests/**"
       - "pyproject.toml"
       - "poetry.lock"
 
