--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -36,7 +36,7 @@ jobs:
     - name: Setup Python environment
       uses: ./.github/actions/setup-python
       with:
-        python-version: "3.11"
+        python-version: ${{ matrix.python-version }}
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
