ci: 从 release CI 中删除发布到 PyPI

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,5 +20,5 @@ jobs:
         with:
           body_path: CHANGELOG.md
           prerelease: ${{ contains(github.ref, 'beta') }}
-  publish:
-    uses: ./.github/workflows/python-publish.yml
+#  publish:
+#    uses: ./.github/workflows/python-publish.yml
